Project

General

Profile

Actions

Bug #62015

open

rgw/syncpolicy: Do not allow allows invalid empty names

Added by Soumya Koduri 10 months ago. Updated 10 months ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
syncpolicy backport_processed
Backport:
pacific quincy reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Do not allow empty names while creating sync policy group/flow/pipe.

  1. radosgw-admin sync group create --group-id= --status=allowed {
    "groups": [ {
    "id": "",
    "data_flow": {},
    "pipes": [],
    "status": "allowed"
    }
    ]
    }

Empty and invalid names should not be allowed in group names.


Related issues 3 (2 open1 closed)

Copied to rgw - Backport #62303: reef: rgw/syncpolicy: Do not allow allows invalid empty namesNewSoumya KoduriActions
Copied to rgw - Backport #62304: quincy: rgw/syncpolicy: Do not allow allows invalid empty namesNewSoumya KoduriActions
Copied to rgw - Backport #62305: pacific: rgw/syncpolicy: Do not allow allows invalid empty namesRejectedSoumya KoduriActions
Actions #1

Updated by Soumya Koduri 10 months ago

  • Status changed from New to Fix Under Review
  • Assignee set to Soumya Koduri
  • Pull request ID set to 52445
Actions #2

Updated by Casey Bodley 10 months ago

  • Status changed from Fix Under Review to Pending Backport
  • Tags set to syncpolicy
  • Backport set to pacific quincy reef
Actions #3

Updated by Backport Bot 10 months ago

  • Copied to Backport #62303: reef: rgw/syncpolicy: Do not allow allows invalid empty names added
Actions #4

Updated by Backport Bot 10 months ago

  • Copied to Backport #62304: quincy: rgw/syncpolicy: Do not allow allows invalid empty names added
Actions #5

Updated by Backport Bot 10 months ago

  • Copied to Backport #62305: pacific: rgw/syncpolicy: Do not allow allows invalid empty names added
Actions #6

Updated by Backport Bot 10 months ago

  • Tags changed from syncpolicy to syncpolicy backport_processed
Actions

Also available in: Atom PDF