rgw/sync-policy: Do not allow empty group names

Fixes: https://tracker.ceph.com/issues/62015
Signed-off-by: Soumya Koduri <skoduri@redhat.com>
(cherry picked from commit fa5759922f28f5cd638744117d233a1f51250628)